# openadapt-types

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
openadapt_types/: __init__.py  _compat.py  action.py  computer_state.py  episode.py  failure.py  parsing.py
tests/: test_compat.py  test_parsing.py  test_schemas.py
